--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,8 @@
         "es2021": true,
         "node": true
     },
-    "extends": "airbnb-base",
+    "extends":"eslint:recommended",
+    // "extends": "airbnb-base",
     "parserOptions": {
         "ecmaVersion": 12
     },
